--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,12 @@ body {
   line-height: 1.6;
 }
 /* callback form */
+.form-control {
+  width: 60%;
+  margin-left: 25%;
+}
 .callback-form {
-  width: 50%;
+  width: 100%;
   padding: 20% 0;
 }
 .callback-form label {
@@ -25,6 +29,7 @@ body {
 }
 .callback-form .form-control {
   margin-bottom: 15px;
+  justify-content: center;
 }
 .callback-form input {
   width: 100%;
@@ -121,11 +126,7 @@ iframe {
   width: 50%;
   z-index: -1;
 }
-.sidebar {
-  text-align: center;
-  display: flex;
-  width: 50%;
-}
+
 form {
   display: block;
 }
@@ -185,17 +186,6 @@ h1 .logo {
   border-bottom: #0b22ec 2px solid;
 }
 
-aside#sidebar {
-  float: right;
-  width: 30%;
-  margin-top: 10px;
-}
-aside#sidebar .quote input,
-aside#sidebar .quote textarea {
-  width: 90%;
-  padding: 5px;
-}
-
 .navbar .logo {
   font-weight: 600;
   font-family: "Trade Winds", cursive;
@@ -243,13 +233,6 @@ aside#sidebar .quote textarea {
 }
 .hero * {
   z-index: 20;
-}
-.hero.blog {
-  background: url("../images/home/blog.jpg") no-repeat center center/cover;
-  height: 40vh;
-}
-.blog {
-  padding-top: 80px;
 }
 
 .icons {
@@ -300,6 +283,8 @@ textarea {
 .callback-form .btn {
   padding: 12px 0;
   margin-top: 20px;
+  width: 25%;
+  margin-left: 25%;
 }
 
 .footer {
@@ -349,6 +334,14 @@ textarea {
     margin-right: 0;
     margin-left: 20px;
     /* margin-left: 30px; */
+  }
+  .form-control {
+    width: 90%;
+    margin: 0 0 15px 0;
+  }
+  .callback-form {
+    width: 100%;
+    padding: 20px 0px 10px 20px;
   }
   h1 img {
     margin-right: 10px;
